--- a/doom/home.html
+++ b/doom/home.html
@@ -11,7 +11,7 @@
     <!--navegação-->
     <nav class="navbar">
         <div class="logo">
-          <img src="./d41575e2-4a30-48af-8893-9940ec9a146e-removebg-preview.png" alt="" class="imglogo">
+          <img src="./Assets/d41575e2-4a30-48af-8893-9940ec9a146e-removebg-preview.png" alt="" class="imglogo">
         </div>
         <div class="search">
          <input class="color1" type="text" placeholder="Pesquisar aparelhos...">
@@ -30,7 +30,11 @@
         <div class="bem-vindo">
             <h1>Bem-vindo à Anhaia</h1>
         </div>
-        <img src="./p03-hero.jpg.large.2x.jpg" alt="" class="imgamostra">
+        <div class="imagem1">
+          <img src="./Assets/p03-hero.jpg.large.2x.jpg" alt="" class="imgamostra">
+          <!--botão gerado no chat-->
+          <button class="botaoflutuante">VÁ AS COMPRAS</button>
+        </div>
     </section>    
     <!--ofertas-->
     <section class="ofertas">
@@ -39,7 +43,7 @@
         </div>
         <div class="carousel-container">
         <button class="prev">&#10094;</button>
-        <div class="boxs-promo" id="carousel">
+        <div class="boxs-promo carousel">
         <div class="box-promo">
             <img src="" alt="">
             <h2>Fone 1</h2>
@@ -74,7 +78,7 @@
         </p>
     </section>
     <video class="meu-video" autoplay loop muted playsinline>
-      <source src="./barracuda-x-chroma-outro-compress-video-1920x700.mp4" type="video/mp4">
+      <source src="./Assets/barracuda-x-chroma-outro-compress-video-1920x700.mp4" type="video/mp4">
       Seu navegador não suporta o elemento de vídeo.
     </video>
 
@@ -85,7 +89,7 @@
         </div>
         <div class="carousel-container">
         <button class="prev">&#10094;</button>
-        <div class="boxs-promo" id="carousel">
+        <div class="boxs-promo carousel">
         <div class="box-promo">
             <img src="" alt="">
             <h2>Fone 1</h2>
