criação da dashboard e alteração na home

--- a/doom/home.html
+++ b/doom/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página inicial</title>
+    <link rel="icon" href="./Assets/d41575e2-4a30-48af-8893-9940ec9a146e-removebg-preview.png" type="image/png">
     <link rel="stylesheet" href="home.css">
     <script src="home.js"></script>
 </head>
